--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-<video autoplay muted loop id="myVideo">
+  
+<video playsinline autoplay muted loop id="myVideo">
   <source src="background.mp4" type="video/mp4">
 </video>
 
