--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="og:description" content="DRS Kaynak Yapı Malzemeleri.">
+<meta name="description" content="DRS Kaynak Yapı Malzemeleri.">
+<meta name="keywords" content="drskaynak.com, drskaynak, drs, kaynak">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
