--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> DRSKAYNAK </title>
+<meta name="og:type" content="website">
+<meta name="og:title" content="DRSKAYNAK">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="og:description" content="DRS Kaynak Yapı Malzemeleri.">
 <meta name="description" content="DRS Kaynak Yapı Malzemeleri.">
